# Flow-Back

./: README.md  pyproject.toml  setup.sh
chirality_checkpoints/: ckpt_epoch_0075.pt
configs/: eval_no_solv.yaml  post_train.yaml  post_train_no_solv.yaml
models/chirality/: state-0.pth
scripts/: eval.py  featurize_pro.py  train.py
src/: adjoint.py  chirality_predictor.py  eval_utils.py  file_config.py
src/scripts/: eval.py  get_val_energies.py  md_test.py  post_train.py  pre_train.py  run_energies.py  train.py
src/utils/: chi.py  energy.py  energy_helpers.py  evaluation.py  model.py  run_energy.py
tests/: test_end_to_end.py
