[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-back"
version = "0.1.0"
description = "FlowBack & FlowBack-Adjoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "torch",
    "mdtraj",
    "pytorch-lightning",
    "rdkit>=2024",    
    "openmm",
    "scipy",
    "pandas",
    "egnn-pytorch",
    "sidechainnet",
    "matplotlib",
    "tqdm",
    "joblib",
    "MDAnalysis==2.8.0",
    "pdbfixer @ git+https://github.com/openmm/pdbfixer.git",
    "openmm @ git+https://github.com/openmm/openmmforcefields.git@main",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/mrjoness/Flow-Back"

[tool.setuptools.packages.find]
include = ["src*"]
